# IFG_SoftwareEngineeringII_Seminar_DevOps

./: .gitignore  README.md  codecov.yml  flake.nix  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml
apps/backend/: Cargo.toml  package.json
apps/backend/migrations/: 0001_initial.sql
apps/backend/src/: db.rs  error.rs  lib.rs  main.rs  models.rs  routes.rs  stats.rs  validation.rs
apps/e2e/: package.json  playwright.config.ts  tsconfig.json
apps/e2e/tests/: notes-crud.spec.ts  validation.spec.ts
apps/frontend/: eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
apps/frontend/src/: App.tsx  api.ts  main.tsx  types.ts
apps/frontend/src/__tests__/: App.test.tsx  NoteForm.test.tsx  NoteItem.test.tsx  NoteList.test.tsx  NoteSearch.test.tsx  api.test.ts
apps/frontend/src/__tests__/__snapshots__/: NoteItem.test.tsx.snap
apps/frontend/src/components/: NoteForm.tsx  NoteItem.tsx  NoteList.tsx  NoteSearch.tsx
